--- a/client/src/app/members/member-list/member-list.component.html
+++ b/client/src/app/members/member-list/member-list.component.html
@@ -21,6 +21,25 @@
         </div>
     <button class="btn btn-primary ms-1" type="submit">Apply Filters</button>
     <button (click)="resetFilters()" class="btn btn-info ms-1" type="submit">Reset Filters</button>
+
+    <div class="col">
+        <div class="btn-group float-end">
+            <button 
+                 type="button"
+                 class="btn btn-primary" 
+                 name="orderBy" 
+                 btnRadio="lastActive"
+                 [(ngModel)]="userParams.orderBy"
+                 (click)="loadMembers()">Last Active</button>
+            <button 
+                  type="button"
+                  class="btn btn-primary" 
+                  name="orderBy" 
+                  btnRadio="created"
+                  [(ngModel)]="userParams.orderBy"
+                  (click)="loadMembers()">Newest Members</button>
+        </div>
+    </div>
     </form>
 </div>
 
