Using route resolvers

--- a/client/src/app/messages/messages.component.html
+++ b/client/src/app/messages/messages.component.html
@@ -42,6 +42,7 @@
         <tbody class="align-middle">
             <tr *ngFor="let message of messages"
                routerLink="{{container==='Outbox' ? '/members' + message.recipientUsername: '/members/' + message.senderUsername}}"
+               [queryParams]="{tab: 'Messages'}"
             >
                 <td>{{message.content}}</td>
                 <td>
