--- a/client/src/app/messages/messages.component.html
+++ b/client/src/app/messages/messages.component.html
@@ -40,7 +40,7 @@
            </tr> 
         </thead>
         <tbody class="align-middle">
-            <tr *ngFor="let message of messages"
+            <tr [hidden]="loading" *ngFor="let message of messages"
                routerLink="{{container==='Outbox' ? '/members' + message.recipientUsername: '/members/' + message.senderUsername}}"
                [queryParams]="{tab: 'Messages'}"
             >
@@ -69,7 +69,7 @@
         </tbody>
     </table>
 </div>
-<div class="d-flex justify-content-center" *ngIf="pagination && messages && messages.length>0">
+<div class="d-flex justify-content-center" *ngIf="!loading && pagination && messages && messages.length>0">
     <pagination 
          [boundaryLinks]="true" 
          [totalItems]="pagination.totalItems"
