setting up modals

--- a/client/src/app/admin/user-management/user-management.component.css
+++ b/client/src/app/admin/user-management/user-management.component.css
@@ -1,7 +1,4 @@
-.row{
-    background-color: transparent;
+.edit-btn{
+    border: 1px  black dashed;
 }
 
-.table{
-    background-color: transparent;
-}
