--- a/client/src/app/members/member-messages/member-messages.component.html
+++ b/client/src/app/members/member-messages/member-messages.component.html
@@ -1,16 +1,15 @@
 <div class="card">
     <div class="card-body">
-<<<<<<< HEAD
         <div *ngIf="(messageService.messageThread$ | async)?.length === 0">
             No message yet... say hi by using the message box below
         </div>
-        <ul *ngIf="(messageService.messageThread$ | async)!.length >0" class="chat">
-=======
-        <div *ngIf="(messageService.messageThread$ | async)?.length===0">
-            No message yet... say hi by using the message box below
-        </div>
-        <ul *ngIf="(messageService.messageThread$ | async)!.length>0" class="chat">
->>>>>>> 16398a758f3c0538389152be1011f496aae82377
+        <ul 
+           #scrollMe
+           style="overflow: scroll; height: 500px;"
+           [scrollTop] = "scrollMe.scrollHeight"
+
+          *ngIf="(messageService.messageThread$ | async)!.length>0" class="chat">
+     
             <li *ngFor="let message of (messageService.messageThread$ | async)">
                 <div>
                     <span class="chat-img float-end">
